# Sphaerosim

./: .gitignore  CMakeLists.txt  InputFile_Linux.xml  InputFile_Linux_ref.xml  InputFile_win.xml  README.md  RunFile.bat  ToDo_BeforeStartingSimulation.txt  auswerten.sh  run.sh  run_SLURM.sh  run_SLURM_array.sh  run_SLURM_array_ref.sh  run_SLURM_ref.sh  run_SMP.sh
Filling_Data.4250/: Data.4250.Side.Cool.txt
Filling_Data.4250/__MACOSX/: ._Data.4250.Side.Cool.txt  ._Data.4250.Side.Fill.txt  ._Data.4250.Side.Hold.txt
src/: CMakeLists.txt  RandomNumberGenerator.cpp  RandomNumberGenerator.h
src/Eigen/: CMakeLists.txt
src/SphaeroSim_v2/: Application.cpp  Application.h  BoundaryCondition.h  CMakeLists.txt  Cache.h  ChangingLog_DividingXmlInputFiles.txt  ComsolFile.cpp  ComsolFile.h  DEIntegrationConstants.h  DEIntegrator.h  DisengagementTime.h  EigenLibrary.h  Element.cpp  Element.h  Exception.cpp  Exception.h  GrowthModel.cpp  GrowthModel.h  HashValue.cpp  HashValue.h  Interpolation.h  Material.h  NucleationModel.cpp  NucleationModel.h  Probe.cpp  Probe.h  RandomNumberGenerator.cpp  RandomNumberGenerator.h  Simulation.cpp  Simulation.h  SimulationComsolInput.cpp  SimulationComsolInput.h  SimulationInputFiles.cpp  SimulationInputFiles.h  SimulationTestscenario.cpp  SimulationTestscenario.h  SimulationVTKInput.cpp  SimulationVTKInput.h  SphaeroSim_v2.vcxproj  SphaeroSim_v2.vcxproj.filters  (+12 more)
